# myopencl

./: LICENSE  README.md  pyproject.toml
examples/: im2col.py  sysarr.py  vgg16.py
kernels/: autorun.cl  conv2d.cl  conv2d_2.cl  conv2d_fix.cl  crash.cl  empty.cl  matmul.cl  matmul_tiled.cl  matmul_tiled_fpga.cl  utils.cl  vecadd.cl  vgg16.cl
kernels/ops/: adaptive_avg_pool2d.cl  batch_norm2d.cl  im2col.cl  im2col_and_tile.cl  linear_bias.cl  max_pool2d.cl  postproc_c.cl  preproc_a.cl  relu.cl  sysarr.h  utils.h
myopencl/: __init__.py  objs.py  scripts.py  utils.py
tests/: conftest.py  test_cl.py  test_numpy.py  test_special.py  test_torch.py  test_utils.py
