[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myopencl"
version = "0.0.1"
description = "Small OpenCL wrapper baaased on ctypes"
authors = [
    {name = "Björn A. Lindqvist"}
]
classifiers = [
    "Programming Language :: Python"
]
dependencies = [
    "humanize"
]
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
homepage = "https://github.com/bjourne/myopencl"

[project.scripts]
mcl-info = "myopencl.scripts:list_platforms"
