# Copyright (C) 2024 Björn A. Lindqvist
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myopencl"
version = "0.0.1"
description = "Small OpenCL wrapper baaased on ctypes"
authors = [
    {name = "Björn A. Lindqvist"}
]
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent"
]
dependencies = [
    "click", "humanize"
]
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
homepage = "https://github.com/bjourne/myopencl"

[project.optional-dependencies]
test = [
    "numpy",
    "pytest>=5.0.0",
    "torch"
]

[project.scripts]
mcl-tool = "myopencl.scripts:main"

[tool.pylint.format]
max-line-length = 80

[tool.pylint."messages control"]
disable = """
    invalid-name,
    missing-docstring,
    no-value-for-parameter,
    protected-access,
    redefined-outer-name,
    too-few-public-methods,
    too-many-arguments,
    too-many-locals,
    too-many-positional-arguments,
    wrong-import-order
    """
